Add check client's certificate on the server side

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_ID">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+	id="WebApp_ID">
 	<servlet>
 		<servlet-name>MyServlet</servlet-name>
 		<servlet-class>com.huami.hessian.MyServlet</servlet-class>
@@ -11,6 +12,17 @@
 		<servlet-name>MyServlet</servlet-name>
 		<url-pattern>/test</url-pattern>
 	</servlet-mapping>
+
+<!-- 	<filter>
+		<display-name>MyFilter</display-name>
+		<filter-name>MyFilter</filter-name>
+		<filter-class>com.huami.hessian.MyFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MyFilter</filter-name>
+		<url-pattern>/test</url-pattern>
+	</filter-mapping> -->
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
